--- a/packages/g.toml
+++ b/packages/g.toml
@@ -31,29 +31,26 @@ provides = ["/usr/bin/gdb"]
 [packages.gcc]
 version = "16-20260118"
 version_check = "gcc-snapshot:"
-description = "GNU Compiler Collection (multilib + RISC-V cross-compilation)"
+description = "GNU Compiler Collection (development snapshot)"
 url = "https://gcc.gnu.org/pub/gcc/snapshots/LATEST-16/gcc-${version}.tar.xz"
 git_url = "git://gcc.gnu.org/git/gcc.git"
 use_git = false
 checksum_url = "https://gcc.gnu.org/pub/gcc/snapshots/LATEST-16/sha512.sum"
 stage = 3
-build_order = 27
-depends = ["gmp", "mpfr", "mpc", "flex", "nvptx-tools", "newlib", "lib32-glibc"]
+build_order = 25
+depends = ["gmp", "mpfr", "mpc", "flex", "nvptx-tools", "newlib"]
 languages = "c,c++,fortran"
 # PGO+LTO: profiledbootstrap with BOOT_CFLAGS for LTO
-# Multilib enabled for 32-bit support (Steam/Wine)
-# Requires lib32-glibc to be built first for 32-bit runtime libraries
+# External LTO breaks symbol versioning - use GCC's BOOT_CFLAGS mechanism instead
 skip_optimization = true
 build_commands = [
+    "case $(uname -m) in x86_64) sed -e '/m64=/s/lib64/lib/' -i.orig gcc/config/i386/t-linux64 ;; esac",
     "ln -sf /usr/src/newlib-*/newlib newlib",
-    "(mkdir -p build && cd build && ../configure --prefix=/usr --enable-languages=c,c++,fortran,lto --enable-default-pie --enable-default-ssp --enable-multilib --with-system-zlib --enable-plugin --disable-werror --enable-threads=posix --enable-tls --enable-libgomp --enable-libatomic --enable-libquadmath --enable-libssp --enable-libstdcxx --enable-shared --enable-__cxa_atexit --enable-clocale=gnu --enable-lto --enable-checking=release --enable-offload-targets=nvptx-none --enable-offload-defaulted --enable-targets=all)",
+    "(mkdir -p build && cd build && ../configure --prefix=/usr --enable-languages=c,c++,fortran,lto --enable-default-pie --enable-default-ssp --disable-multilib --with-system-zlib --enable-plugin --disable-werror --enable-threads=posix --enable-tls --enable-libgomp --enable-libatomic --enable-libquadmath --enable-libssp --enable-libstdcxx --enable-shared --enable-__cxa_atexit --enable-clocale=gnu --enable-lto --enable-checking=release --enable-offload-targets=nvptx-none --enable-offload-defaulted)",
     "(cd build && make -j${NPROC} BOOT_CFLAGS='-O3 -march=znver3 -mtune=znver3 -flto=auto -g' profiledbootstrap)",
     "(cd build && make DESTDIR=${PKG} install)",
-    "mkdir -p ${PKG}/usr/lib32",
-    "mv ${PKG}/usr/lib/../lib32/* ${PKG}/usr/lib32/ 2>/dev/null || true",
+    "cp -v ${PKG}/usr/include/c++/*/x86_64-pc-linux-gnu/bits/c++config.h ${PKG}/usr/include/c++/*/bits/c++config.h",
     "mkdir -p ${PKG}/usr/lib/bfd-plugins && (cd ${PKG}/usr/lib/bfd-plugins && ln -svf ../libexec/gcc/*/*/liblto_plugin.so .)",
-    "mkdir -p ${PKG}/lib",
-    "ln -svf /usr/bin/cpp ${PKG}/lib/cpp",
     "ln -svf gcc ${PKG}/usr/bin/cc",
     "echo '#!/bin/sh' > ${PKG}/usr/bin/c99",
     "echo 'exec gcc -std=c99 \"$@\"' >> ${PKG}/usr/bin/c99",
