Remove multilib/Steam, add Flatpak support
- Remove all lib32-* packages (multilib too complex for LFS)
- Remove steam package (will use Flatpak instead)
- Add flatpak and dependencies: bubblewrap, fuse3, ostree, gpgme,
  json-glib, libseccomp, libsoup3

--- a/packages/b.toml
+++ b/packages/b.toml
@@ -163,4 +163,14 @@ build_commands = [
 ]
 provides = ["/usr/bin/riscv64-elf-as", "/usr/bin/riscv64-elf-ld", "/usr/bin/riscv64-elf-objcopy"]
 
+[packages.bubblewrap]
+version = "0.11.0"
+version_check = "github:containers/bubblewrap"
+description = "Unprivileged sandboxing tool"
+url = "https://github.com/containers/bubblewrap/releases/download/v${version}/bubblewrap-${version}.tar.xz"
+stage = 10
+depends = ["libcap"]
+build_system = "meson"
+provides = ["/usr/bin/bwrap"]
+
 # NVMe tools
