--- a/packages/o.toml
+++ b/packages/o.toml
@@ -54,6 +54,20 @@ build_system = "meson"
 meson_flags = "-Dhotdoc=disabled -Dtests=disabled -Dbenchmarks=disabled"
 provides = ["/usr/lib/liborc-0.4.so"]
 
+[packages.ostree]
+version = "2025.3"
+version_check = "github:ostreedev/ostree"
+description = "Operating system and container binary deployment and upgrades"
+url = "https://github.com/ostreedev/ostree/releases/download/v${version}/libostree-${version}.tar.xz"
+stage = 10
+depends = ["glib", "gpgme", "fuse3", "libarchive", "curl", "libsoup3", "e2fsprogs"]
+build_commands = [
+    "./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var --with-curl --with-soup3 --with-gpgme --without-avahi",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+provides = ["/usr/lib/libostree-1.so", "/usr/bin/ostree"]
+
 [packages.octave]
 version = "10.3.0"
 version_check = "gnu:octave"
