--- a/packages/e.toml
+++ b/packages/e.toml
@@ -12,6 +12,19 @@ build_system = "autotools"
 configure_flags = "--disable-static"
 provides = ["/usr/lib/libenchant-2.so"]
 
+[packages.e2fsprogs]
+version = "1.47.2"
+version_check = "url:https://sourceforge.net/projects/e2fsprogs/files/e2fsprogs/|e2fsprogs-([0-9]+\\.[0-9]+\\.[0-9]+)"
+description = "Ext2/3/4 filesystem utilities"
+url = "https://downloads.sourceforge.net/e2fsprogs/e2fsprogs-${version}.tar.gz"
+stage = 4
+build_commands = [
+    "./configure --prefix=/usr --sysconfdir=/etc --enable-elf-shlibs --disable-libblkid --disable-libuuid --disable-uuidd --disable-fsck",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install install-libs"
+]
+provides = ["/usr/lib/libe2p.so", "/usr/sbin/mke2fs"]
+
 [packages.expat]
 version = "2.7.3"
 version_check = "github:libexpat/libexpat"
