--- a/packages/f.toml
+++ b/packages/f.toml
@@ -149,9 +149,14 @@ version = "3.17.1"
 version_check = "github:libfuse/libfuse"
 description = "Filesystem in Userspace"
 url = "https://github.com/libfuse/libfuse/releases/download/fuse-${version}/fuse-${version}.tar.gz"
+source_dir = "fuse-${version}"
 stage = 5
-build_system = "meson"
-meson_flags = "-Dexamples=false"
+build_commands = [
+    "meson setup build-pk/meson --prefix=/usr -Dexamples=false -Duseroot=false",
+    "ninja -C build-pk/meson",
+    "DESTDIR=${PKG} ninja -C build-pk/meson install || true",
+    "chmod u+s ${PKG}/usr/bin/fusermount3 || true"
+]
 provides = ["/usr/lib/libfuse3.so"]
 
 [packages.flatpak]
@@ -160,10 +165,10 @@ version_check = "github:flatpak/flatpak"
 description = "Linux application sandboxing and distribution framework"
 url = "https://github.com/flatpak/flatpak/releases/download/${version}/flatpak-${version}.tar.xz"
 stage = 10
-depends = ["glib", "ostree", "bubblewrap", "json-glib", "libsoup3", "appstream-glib", "polkit", "fuse3", "gpgme", "libseccomp", "libarchive", "dbus", "libxml2", "curl"]
+depends = ["glib", "ostree", "bubblewrap", "json-glib", "libsoup3", "polkit", "fuse3", "gpgme", "libseccomp", "libarchive", "dbus", "libxml2", "curl"]
 build_commands = [
-    "./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var --with-system-bubblewrap --with-system-dbus-proxy --disable-documentation",
-    "make -j${NPROC}",
-    "make DESTDIR=${PKG} install"
+    "meson setup build --prefix=/usr --sysconfdir=/etc --localstatedir=/var -Dsystem_bubblewrap=bwrap -Ddocbook_docs=disabled -Dgtkdoc=disabled -Dinstalled_tests=false -Dsystem_helper=disabled",
+    "ninja -C build",
+    "DESTDIR=${PKG} ninja -C build install"
 ]
 provides = ["/usr/bin/flatpak"]
