--- a/packages/l.toml
+++ b/packages/l.toml
@@ -166,6 +166,29 @@ depends = ["python"]
 configure_flags = "--with-python=/usr --with-history"
 provides = ["/usr/lib/libxml2.so", "/usr/bin/xmllint"]
 
+[packages.libxmlb]
+version = "0.3.21"
+version_check = "github:hughsie/libxmlb"
+description = "Library to help create and query binary XML blobs"
+url = "https://github.com/hughsie/libxmlb/releases/download/${version}/libxmlb-${version}.tar.xz"
+stage = 9
+depends = ["glib", "libxml2"]
+skip_optimization = true
+build_commands = [
+    "meson setup build-pk/meson --prefix=/usr -Dgtkdoc=false -Dintrospection=false -Dtests=false",
+    "ninja -C build-pk/meson",
+    "DESTDIR=${PKG} ninja -C build-pk/meson install"
+]
+provides = ["/usr/lib/libxmlb.so"]
+
+[packages.libyaml]
+version = "0.2.5"
+version_check = "github:yaml/libyaml"
+description = "YAML parser and emitter library"
+url = "https://github.com/yaml/libyaml/releases/download/${version}/yaml-${version}.tar.gz"
+stage = 5
+provides = ["/usr/lib/libyaml.so"]
+
 [packages.librsvg]
 version = "2.61.3"
 version_check = "gnome:librsvg"
@@ -447,6 +470,70 @@ stage = 8
 build_system = "cmake"
 cmake_flags = "-DCMAKE_INSTALL_LIBDIR=lib -DENABLE_STATIC=OFF -DWITH_JAVA=OFF"
 
+[packages.libgpg-error]
+version = "1.55"
+version_check = "url:https://gnupg.org/ftp/gcrypt/libgpg-error/|libgpg-error-([0-9]+\\.[0-9]+)\\.tar"
+description = "GnuPG error library"
+url = "https://gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-${version}.tar.bz2"
+stage = 5
+build_commands = [
+    "./configure --prefix=/usr",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+provides = ["/usr/lib/libgpg-error.so"]
+
+[packages.libassuan]
+version = "3.0.2"
+version_check = "url:https://gnupg.org/ftp/gcrypt/libassuan/|libassuan-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
+description = "IPC library for GnuPG"
+url = "https://gnupg.org/ftp/gcrypt/libassuan/libassuan-${version}.tar.bz2"
+stage = 5
+depends = ["libgpg-error"]
+build_commands = [
+    "./configure --prefix=/usr",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+provides = ["/usr/lib/libassuan.so"]
+
+[packages.libgcrypt]
+version = "1.11.0"
+version_check = "url:https://gnupg.org/ftp/gcrypt/libgcrypt/|libgcrypt-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
+description = "General purpose cryptographic library"
+url = "https://gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-${version}.tar.bz2"
+stage = 5
+depends = ["libgpg-error"]
+build_commands = [
+    "./configure --prefix=/usr",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+provides = ["/usr/lib/libgcrypt.so"]
+
+[packages.libksba]
+version = "1.6.7"
+version_check = "url:https://gnupg.org/ftp/gcrypt/libksba/|libksba-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
+description = "X.509 and CMS library"
+url = "https://gnupg.org/ftp/gcrypt/libksba/libksba-${version}.tar.bz2"
+stage = 5
+depends = ["libgpg-error"]
+build_commands = [
+    "./configure --prefix=/usr",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+provides = ["/usr/lib/libksba.so"]
+
+[packages.libpsl]
+version = "0.21.5"
+version_check = "github:rockdaboot/libpsl"
+description = "Public Suffix List library"
+url = "https://github.com/rockdaboot/libpsl/releases/download/${version}/libpsl-${version}.tar.gz"
+stage = 5
+build_system = "meson"
+provides = ["/usr/lib/libpsl.so"]
+
 [packages.libseccomp]
 version = "2.5.5"
 version_check = "github:seccomp/libseccomp"
@@ -465,10 +552,15 @@ version = "3.6.4"
 version_check = "gnome:libsoup"
 description = "HTTP client/server library for GNOME (version 3)"
 url = "https://download.gnome.org/sources/libsoup/3.6/libsoup-${version}.tar.xz"
+source_dir = "libsoup-${version}"
 stage = 9
-depends = ["glib", "libpsl", "libxml2", "sqlite", "nghttp2"]
-build_system = "meson"
-meson_flags = "-Dtests=false -Dintrospection=disabled -Dvapi=disabled -Ddocs=disabled"
+depends = ["glib", "libpsl", "libxml2", "sqlite", "nghttp2", "glib-networking"]
+skip_optimization = true
+build_commands = [
+    "meson setup build-pk/meson --prefix=/usr -Dtests=false -Dintrospection=disabled -Dvapi=disabled -Ddocs=disabled -Dsysprof=disabled",
+    "ninja -C build-pk/meson",
+    "DESTDIR=${PKG} ninja -C build-pk/meson install"
+]
 provides = ["/usr/lib/libsoup-3.0.so"]
 
 [packages.libsndfile]
