Add flatpak support with required dependencies
- appstream: Fix build with XML_CATALOG_FILES, add docbook-xsl dep, disable systemd
- flatpak: Add socat dependency, disable tests
- libxmlb: Fix stack protector issue with custom CFLAGS
- libyaml: Fix source_dir to match tarball contents
- polkit: Enable full build (not libs-only), add skip_optimization for duktape
- socat: Add new package for flatpak requirement

--- a/packages/a.toml
+++ b/packages/a.toml
@@ -172,9 +172,12 @@ description = "AppStream metadata library and tools"
 url = "https://github.com/ximion/appstream/archive/refs/tags/v${version}.tar.gz"
 source_dir = "appstream-${version}"
 stage = 9
-depends = ["glib", "libxml2", "curl", "libxmlb"]
-build_system = "meson"
-meson_flags = "-Dgir=false -Dvapi=false -Ddocs=false -Dstemming=false -Dapidocs=false"
+depends = ["glib", "libxml2", "curl", "libxmlb", "docbook-xsl"]
+build_commands = [
+    "XML_CATALOG_FILES=/etc/xml/catalog meson setup build-pk/meson --prefix=/usr -Dgir=false -Dvapi=false -Ddocs=false -Dstemming=false -Dapidocs=false -Dsystemd=false --wrap-mode=nodownload",
+    "XML_CATALOG_FILES=/etc/xml/catalog ninja -C build-pk/meson",
+    "DESTDIR=${PKG} ninja -C build-pk/meson install"
+]
 provides = ["/usr/lib/libappstream.so"]
 
 [packages.amdgpu-firmware]
