--- a/packages/p.toml
+++ b/packages/p.toml
@@ -173,7 +173,8 @@ stage = 9
 build_order = 8
 build_system = "meson"
 depends = ["duktape", "glib"]
-meson_flags = "-Dauthfw=shadow -Dintrospection=false -Dman=false -Dgtk_doc=false -Dtests=false -Dsession_tracking=ConsoleKit -Dlibs-only=true"
+skip_optimization = true
+meson_flags = "-Dauthfw=shadow -Dintrospection=false -Dman=false -Dgtk_doc=false -Dtests=false -Dsession_tracking=ConsoleKit"
 
 [packages.pulseaudio]
 version = "17.0"
