--- a/packages/f.toml
+++ b/packages/f.toml
@@ -165,9 +165,9 @@ version_check = "github:flatpak/flatpak"
 description = "Linux application sandboxing and distribution framework"
 url = "https://github.com/flatpak/flatpak/releases/download/${version}/flatpak-${version}.tar.xz"
 stage = 10
-depends = ["glib", "ostree", "bubblewrap", "json-glib", "libsoup3", "polkit", "fuse3", "gpgme", "libseccomp", "libarchive", "dbus", "libxml2", "curl"]
+depends = ["glib", "ostree", "bubblewrap", "json-glib", "libsoup3", "polkit", "fuse3", "gpgme", "libseccomp", "libarchive", "dbus", "libxml2", "curl", "socat"]
 build_commands = [
-    "meson setup build --prefix=/usr --sysconfdir=/etc --localstatedir=/var -Dsystem_bubblewrap=bwrap -Ddocbook_docs=disabled -Dgtkdoc=disabled -Dinstalled_tests=false -Dsystem_helper=disabled",
+    "meson setup build --prefix=/usr --sysconfdir=/etc --localstatedir=/var -Dsystem_bubblewrap=bwrap -Ddocbook_docs=disabled -Dgtkdoc=disabled -Dinstalled_tests=false -Dsystem_helper=disabled -Dtests=false",
     "ninja -C build",
     "DESTDIR=${PKG} ninja -C build install"
 ]
