Add iptables, libmnl; fix kernel netfilter and EFI config
- Add libmnl 1.0.5 (netfilter netlink library)
- Add iptables 1.8.11 (packet filtering and NAT)
- Fix linux kernel config:
  - Add full netfilter/iptables/nftables support for masquerading
  - Add EFI boot support (EFI_STUB, EFI_MIXED, EFI_RUNTIME_WRAPPERS)
  - Keep IGC (Intel I225-V), iwlwifi (Intel AX200) drivers

--- a/packages/i.toml
+++ b/packages/i.toml
@@ -116,6 +116,21 @@ stage = 19
 
 # FPGA/EDA Tools
 
+[packages.iptables]
+version = "1.8.11"
+version_check = "url:https://www.netfilter.org/projects/iptables/downloads.html|iptables-([0-9]+\\.[0-9]+\\.[0-9]+)\\.tar"
+description = "Packet filtering and NAT administration tools"
+url = "https://www.netfilter.org/projects/iptables/files/iptables-${version}.tar.xz"
+stage = 7
+build_order = 5
+depends = ["libnl", "libmnl"]
+build_commands = [
+    "./configure --prefix=/usr --sbindir=/usr/sbin --disable-nftables --enable-libipq",
+    "make -j${NPROC}",
+    "make DESTDIR=${PKG} install"
+]
+provides = ["/usr/sbin/iptables", "/usr/sbin/ip6tables"]
+
 [packages.iverilog]
 version = "12_0"
 version_check = "github:steveicarus/iverilog"
